# ros2-comienzo

./: .gitignore  README.md
src/: README.md
src/intento2_turtlesim_project_pkg/: CMakeLists.txt  package.xml  readme.txt
src/intento2_turtlesim_project_pkg/include/: tortuga_controller2.hpp  tortuga_spawner2.hpp
src/intento2_turtlesim_project_pkg/src/: tortuga_controller2.cpp  tortuga_spawner2.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  number_publisher_params.cpp  robot_news_station.cpp  smartphone.cpp  template.cpp
src/my_cpp_pkg/src/actividades/actividad2/: number_counter.cpp  number_publisher.cpp  readme.txt
src/my_cpp_pkg/src/actividades/actividad3/: call_reset_counter3.cpp  number_counter3.cpp  number_publisher3.cpp  readme.txt
src/my_cpp_pkg/src/actividades/actividad4/: battery.cpp  led_panel.cpp  readme.txt
src/my_cpp_pkg/src/actividades/actividad5/: led_panel_params.cpp  readme.txt  robot_news_station_params.cpp
src/my_cpp_pkg/src/actividades/actividad6/: act6_multiple_news_station.launch.py  readme.txt
src/my_py_pkg/: package.xml  setup.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: act2_number_app.launch.py  intento2_turtlesim_project.launch.py  turtlesim_project.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: LedStates.msg  Tortuga.msg  TortugaArray.msg
src/my_robot_interfaces/srv/: CatchTortuga.srv
src/turtlesim_project_pkg/: CMakeLists.txt  package.xml
src/turtlesim_project_pkg/src/: borrar.cpp  tortuga_controller.cpp  tortuga_spawner.cpp
